RESOLVED FIXED270474
Threading sched_param missing initializer
https://bugs.webkit.org/show_bug.cgi?id=270474
Summary Threading sched_param missing initializer
Dennis Camera
Reported 2024-03-04 12:38:01 PST
Created attachment 470164 [details] Build log On my system when building WebKit with GCC 13.2.1 I get the following errors: /tmp/WebKit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:333:40: warning: missing initializer for member 'sched_param::__reserved1' [-Wmissing-field-initializers] 333 | struct sched_param param = { 0 }; | ^ /tmp/WebKit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:333:40: warning: missing initializer for member 'sched_param::__reserved2' [-Wmissing-field-initializers] /tmp/WebKit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:333:40: warning: missing initializer for member 'sched_param::__reserved3' [-Wmissing-field-initializers] /tmp/WebKit/Source/WTF/wtf/linux/RealTimeThreads.cpp: In member function 'void WTF::RealTimeThreads::demoteThreadFromRealTime(const WTF::Thread&)': /tmp/WebKit/Source/WTF/wtf/linux/RealTimeThreads.cpp:141:36: warning: missing initializer for member 'sched_param::__reserved1' [-Wmissing-field-initializers] 141 | struct sched_param param = { 0 }; | ^ /tmp/WebKit/Source/WTF/wtf/linux/RealTimeThreads.cpp:141:36: warning:missing initializer for member 'sched_param::__reserved2' [-Wmissing-field-initializers] /tmp/WebKit/Source/WTF/wtf/linux/RealTimeThreads.cpp:141:36: warning: missing initializer for member 'sched_param::__reserved3' [-Wmissing-field-initializers]
Attachments
Build log (70.33 KB, text/plain)
2024-03-04 12:38 PST, Dennis Camera
no flags
Dennis Camera
Comment 1 2024-03-04 13:02:26 PST
EWS
Comment 2 2024-03-04 14:42:31 PST
Committed 275655@main (dc2a5279c02a): <https://commits.webkit.org/275655@main> Reviewed commits have been landed. Closing PR #25447 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-04 14:43:20 PST
Note You need to log in before you can comment on or make changes to this bug.