Cherry-pick 275655@main (dc2a5279c02a). https://bugs.webkit.org/show_bug.cgi?id=270474

[WTF] fix empty initializer of sched_param
    https://bugs.webkit.org/show_bug.cgi?id=270474

    Reviewed by Michael Catanzaro.

    Initializing the sched_param structs to zero with { 0 } fails when using GCC 13.

    * Source/WTF/wtf/linux/RealTimeThreads.cpp: change struct sched_param zero initializer.
    * Source/WTF/wtf/posix/ThreadingPOSIX.cpp: change struct sched_param zero initializer.

    Canonical link: https://commits.webkit.org/275655@main

Canonical link: https://commits.webkit.org/274313.161@webkitglib/2.44